@@ -42,6 +42,7 @@ __assertfail NOSIGFE
 __b64_ntop NOSIGFE
 __b64_pton NOSIGFE
 __cxa_atexit SIGFE
+__cxa_finalize SIGFE
 __dn_comp SIGFE
 __dn_expand SIGFE
 __dn_skipname SIGFE
