@@ -1,7 +1,7 @@
 /* dcrt0.cc -- essentially the main() for the Cygwin dll
 
    Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006,
-   2007, 2008, 2009, 2010, 2011, 2012, 2013 Red Hat, Inc.
+   2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014 Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -1240,7 +1240,7 @@ cygwin_atexit (void (*fn) (void))
 {
   int res;
   dll *d = dlls.find ((void *) _my_tls.retaddr ());
-  res = d ? __cxa_atexit ((void (*) (void *)) fn, NULL, d) : atexit (fn);
+  res = d ? __cxa_atexit ((void (*) (void *)) fn, NULL, d->handle) : atexit (fn);
   return res;
 }
 
